--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,6 +9,7 @@
 
 .card span {
   display: inline-block;
+  display: block;
   transition: transform 200ms;
 }
 
@@ -70,6 +71,7 @@
 
   .card:hover span {
     transform: translateX(4px);
+    border: 1px solid #eee;
   }
 }
 
